# urg_laser_scanner

./: CMakeLists.txt  README.md  conanfile.py
include/: Connection_information.h  laser_scanner.h
src/: Connection_information.cpp  interface.cpp  laser_scanner.cpp
urg_library-1.1.9/: urg_c-config  urg_c-config.in  urg_cpp-config  urg_cpp-config.in
urg_library-1.1.9/include/c/: urg_utils.h
urg_library-1.1.9/samples/c/: calculate_xy  find_port  get_distance  get_distance_intensity  get_multiecho  get_multiecho_intensity  sensor_parameter  sync_time_stamp
urg_library-1.1.9/samples/cpp/: get_distance  get_distance_intensity  get_multiecho  get_multiecho_intensity  sensor_parameter  sync_time_stamp
urg_library-1.1.9/src/: urg_sensor.c  urg_utils.c
